# ghactiontest

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.github/workflows/src/example/: __init__.py
src/example/: __init__.py  simple.py
tests/: test_simple.py
